--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,8 @@ docstring-code-format = true
 
 [tool.mypy]
 strict = true
+files = ["img_sanitizer"]
+ignore_missing_imports = true
 disallow_untyped_defs = true
 disallow_any_unimported = true
 no_implicit_optional = true
@@ -61,3 +63,4 @@ warn_redundant_casts = true
 warn_unused_configs = true
 warn_no_return = true
 check_untyped_defs = true
+explicit_package_bases = true
