--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,8 @@ docstring-code-format = true
 strict = true
 files = ["img_sanitizer"]
 ignore_missing_imports = true
+disallow_untyped_defs = true
+allow_untyped_decorators = true
 no_implicit_optional = true
 warn_return_any = true
 show_error_codes = true
