--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Python library designed to prepare, clean, and normalize JPEG ima
 readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
+    "humanfriendly>=10.0",
     "piexif>=1.1.3",
     "rich>=14.2.0",
     "typer>=0.21.1",
